Enable deprecation warnings and modernize reflection