@@ -107,13 +107,13 @@ public class JResetPickupID extends javax.swing.JFrame {
 
 // Set the look and feel.
                 try {
-                    Object laf = Class.forName(AppConfig.getInstance().getProperty("swing.defaultlaf")).newInstance();
+                    Object laf = Class.forName(AppConfig.getInstance().getProperty("swing.defaultlaf")).getDeclaredConstructor().newInstance();
                     if (laf instanceof LookAndFeel) {
                         UIManager.setLookAndFeel((LookAndFeel) laf);
                     } else if (laf instanceof SubstanceSkin) {
                         SubstanceLookAndFeel.setSkin((SubstanceSkin) laf);
                     }
-                } catch (ClassNotFoundException | InstantiationException | IllegalAccessException | UnsupportedLookAndFeelException e) {
+                } catch (ReflectiveOperationException | UnsupportedLookAndFeelException e) {
                 }
 
                 JResetPickupID resetFrame = new JResetPickupID();//
